# serializer version: 1
# name: test_fallbacks[llm]
  '''
  {
    "lc": 1,
    "type": "constructor",
    "id": [
      "langchain",
      "schema",
      "runnable",
      "RunnableWithFallbacks"
    ],
    "kwargs": {
      "runnable": {
        "lc": 1,
        "type": "not_implemented",
        "id": [
          "langchain_core",
          "language_models",
          "fake",
          "FakeListLLM"
        ],
        "repr": "FakeListLLM(name=None, cache=None, verbose=False, callbacks=None, tags=None, metadata=None, custom_get_token_ids=None, callback_manager=None, responses=['foo'], sleep=None, i=1)",
        "name": "FakeListLLM",
        "graph": {
          "nodes": [
            {
              "id": 0,
              "type": "schema",
              "data": "FakeListLLMInput"
            },
            {
              "id": 1,
              "type": "runnable",
              "data": {
                "id": [
                  "langchain_core",
                  "language_models",
                  "fake",
                  "FakeListLLM"
                ],
                "name": "FakeListLLM"
              }
            },
            {
              "id": 2,
              "type": "schema",
              "data": "FakeListLLMOutput"
            }
          ],
          "edges": [
            {
              "source": 0,
              "target": 1
            },
            {
              "source": 1,
              "target": 2
            }
          ]
        }
      },
      "fallbacks": [
        {
          "lc": 1,
          "type": "not_implemented",
          "id": [
            "langchain_core",
            "language_models",
            "fake",
            "FakeListLLM"
          ],
          "repr": "FakeListLLM(name=None, cache=None, verbose=False, callbacks=None, tags=None, metadata=None, custom_get_token_ids=None, callback_manager=None, responses=['bar'], sleep=None, i=0)",
          "name": "FakeListLLM",
          "graph": {
            "nodes": [
              {
                "id": 0,
                "type": "schema",
                "data": "FakeListLLMInput"
              },
              {
                "id": 1,
                "type": "runnable",
                "data": {
                  "id": [
                    "langchain_core",
                    "language_models",
                    "fake",
                    "FakeListLLM"
                  ],
                  "name": "FakeListLLM"
                }
              },
              {
                "id": 2,
                "type": "schema",
                "data": "FakeListLLMOutput"
              }
            ],
            "edges": [
              {
                "source": 0,
                "target": 1
              },
              {
                "source": 1,
                "target": 2
              }
            ]
          }
        }
      ]
    },
    "name": "RunnableWithFallbacks",
    "graph": {
      "nodes": [
        {
          "id": 0,
          "type": "schema",
          "data": "FakeListLLMInput"
        },
        {
          "id": 1,
          "type": "runnable",
          "data": {
            "id": [
              "langchain",
              "schema",
              "runnable",
              "RunnableWithFallbacks"
            ],
            "name": "RunnableWithFallbacks"
          }
        },
        {
          "id": 2,
          "type": "schema",
          "data": "FakeListLLMOutput"
        }
      ],
      "edges": [
        {
          "source": 0,
          "target": 1
        },
        {
          "source": 1,
          "target": 2
        }
      ]
    }
  }
  '''
# ---
# name: test_fallbacks[llm_multi]
  '''
  {
    "lc": 1,
    "type": "constructor",
    "id": [
      "langchain",
      "schema",
      "runnable",
      "RunnableWithFallbacks"
    ],
    "kwargs": {
      "runnable": {
        "lc": 1,
        "type": "not_implemented",
        "id": [
          "langchain_core",
          "language_models",
          "fake",
          "FakeListLLM"
        ],
        "repr": "FakeListLLM(name=None, cache=None, verbose=False, callbacks=None, tags=None, metadata=None, custom_get_token_ids=None, callback_manager=None, responses=['foo'], sleep=None, i=1)",
        "name": "FakeListLLM",
        "graph": {
          "nodes": [
            {
              "id": 0,
              "type": "schema",
              "data": "FakeListLLMInput"
            },
            {
              "id": 1,
              "type": "runnable",
              "data": {
                "id": [
                  "langchain_core",
                  "language_models",
                  "fake",
                  "FakeListLLM"
                ],
                "name": "FakeListLLM"
              }
            },
            {
              "id": 2,
              "type": "schema",
              "data": "FakeListLLMOutput"
            }
          ],
          "edges": [
            {
              "source": 0,
              "target": 1
            },
            {
              "source": 1,
              "target": 2
            }
          ]
        }
      },
      "fallbacks": [
        {
          "lc": 1,
          "type": "not_implemented",
          "id": [
            "langchain_core",
            "language_models",
            "fake",
            "FakeListLLM"
          ],
          "repr": "FakeListLLM(name=None, cache=None, verbose=False, callbacks=None, tags=None, metadata=None, custom_get_token_ids=None, callback_manager=None, responses=['baz'], sleep=None, i=1)",
          "name": "FakeListLLM",
          "graph": {
            "nodes": [
              {
                "id": 0,
                "type": "schema",
                "data": "FakeListLLMInput"
              },
              {
                "id": 1,
                "type": "runnable",
                "data": {
                  "id": [
                    "langchain_core",
                    "language_models",
                    "fake",
                    "FakeListLLM"
                  ],
                  "name": "FakeListLLM"
                }
              },
              {
                "id": 2,
                "type": "schema",
                "data": "FakeListLLMOutput"
              }
            ],
            "edges": [
              {
                "source": 0,
                "target": 1
              },
              {
                "source": 1,
                "target": 2
              }
            ]
          }
        },
        {
          "lc": 1,
          "type": "not_implemented",
          "id": [
            "langchain_core",
            "language_models",
            "fake",
            "FakeListLLM"
          ],
          "repr": "FakeListLLM(name=None, cache=None, verbose=False, callbacks=None, tags=None, metadata=None, custom_get_token_ids=None, callback_manager=None, responses=['bar'], sleep=None, i=0)",
          "name": "FakeListLLM",
          "graph": {
            "nodes": [
              {
                "id": 0,
                "type": "schema",
                "data": "FakeListLLMInput"
              },
              {
                "id": 1,
                "type": "runnable",
                "data": {
                  "id": [
                    "langchain_core",
                    "language_models",
                    "fake",
                    "FakeListLLM"
                  ],
                  "name": "FakeListLLM"
                }
              },
              {
                "id": 2,
                "type": "schema",
                "data": "FakeListLLMOutput"
              }
            ],
            "edges": [
              {
                "source": 0,
                "target": 1
              },
              {
                "source": 1,
                "target": 2
              }
            ]
          }
        }
      ]
    },
    "name": "RunnableWithFallbacks",
    "graph": {
      "nodes": [
        {
          "id": 0,
          "type": "schema",
          "data": "FakeListLLMInput"
        },
        {
          "id": 1,
          "type": "runnable",
          "data": {
            "id": [
              "langchain",
              "schema",
              "runnable",
              "RunnableWithFallbacks"
            ],
            "name": "RunnableWithFallbacks"
          }
        },
        {
          "id": 2,
          "type": "schema",
          "data": "FakeListLLMOutput"
        }
      ],
      "edges": [
        {
          "source": 0,
          "target": 1
        },
        {
          "source": 1,
          "target": 2
        }
      ]
    }
  }
  '''
# ---
